<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.activity.MainActivity"
        android:padding="10dp"
        android:orientation="vertical">

    <TextView
            android:layout_marginTop="40dp"
            style="@style/TextAppearance.MaterialComponents.Headline1"
            android:text="@string/hey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/tvName"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:text="@string/lets_learn_Something_new"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="15dp"
                android:text="@string/search_skill_master"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            app:cardElevation="5dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="15dp"
                android:text="@string/request_for_custom_learning"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>



    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_margin="20dp"
            android:text="@string/next"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="55dp"/>

</LinearLayout>