<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_height="match_parent"
        tools:context=".ui.start.signup.NumberVerificationActivity">
    <LinearLayout
            android:layout_marginTop="120dp"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.cardview.widget.CardView
                app:cardElevation="10dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:padding="5dp"
                        android:id="@+id/tvNumber"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/secondaryColor"
                        android:text="@string/default_number"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/primaryDarkColor"/>

                <TextView
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:padding="5dp"
                        android:textColor="@color/grey_text"
                        android:text="@string/msg_number_verification"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:id="@+id/btnSendCode"
                        android:text="@string/send_code"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"/>

                <LinearLayout
                        android:id="@+id/hiddenLayout"
                        android:gravity="center_horizontal"
                        android:visibility="gone"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <LinearLayout

                            android:gravity="center_horizontal"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:padding="5dp"
                                android:textAlignment="center"
                                android:text="@string/enter_code_below"
                                style="@style/TextAppearance.MaterialComponents.Headline6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <com.chaos.view.PinView
                                android:id="@+id/pinView"
                                android:layout_marginTop="20dp"
                                android:layout_gravity="center_horizontal"
                                style="@style/PinWidget.PinView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:cursorVisible="true"
                                android:inputType="number"
                                android:textSize="18sp"
                                app:cursorColor="@color/divider"
                                app:cursorWidth="2dp"
                                app:hideLineWhenFilled="false"
                                app:itemCount="6"
                                app:itemHeight="48dp"
                                app:itemRadius="15dp"
                                app:itemSpacing="10dp"
                                app:itemWidth="48dp"
                                app:lineColor="@color/divider"
                                app:lineWidth="2dp"
                                app:viewType="rectangle"/>


                        <com.google.android.material.button.MaterialButton
                                android:layout_marginTop="20dp"
                                android:id="@+id/btnVerify"
                                android:text="@string/verify"
                                style="@style/Widget.MaterialComponents.Button"
                                android:layout_width="wrap_content"
                                android:layout_height="55dp"/>
                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnResend"
                                android:text="@string/resend"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="55dp"/>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>