<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.activity.StartActivity"
        android:animateLayoutChanges="true">

    <ImageView
            android:id="@+id/ivTheme"
            android:layout_margin="20dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_color"
            android:scaleType="fitCenter"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            app:cardCornerRadius="60dp"
            android:id="@+id/logo"
            android:layout_centerInParent="true"
            android:layout_width="120dp"
            android:layout_height="120dp">
        <ImageView
                android:src="@drawable/ic_app"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/tvAppName"
            android:visibility="visible"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo"
            android:text="@string/welcome_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="2"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/btnSignUp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginEnd="10dp"
        />
        <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/btnLogin"
                android:layout_marginStart="10dp"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/login"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="55dp"/>

    </LinearLayout>

</RelativeLayout>