<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.start.LoginActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:layout_gravity="center_horizontal"
                app:cardElevation="5dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:textAlignment="center"
                    android:text="@string/login"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:background="@drawable/bg_text"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                    <com.hbb20.CountryCodePicker
                            app:ccp_rememberLastSelection="true"
                            app:ccp_showNameCode="false"
                            android:id="@+id/codePicker"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:ccp_autoDetectCountry="true"
                            app:ccp_autoDetectLanguage="true"
                            app:ccp_textSize="16sp"
                            app:ccp_showFlag="false"
                    />
                    <EditText
                            android:maxLength="10"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/etNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:gravity="start|center_vertical"
                            android:hint="@string/contact_number"
                            android:inputType="phone"
                            android:paddingBottom="5dp"
                            android:textAlignment="viewStart"
                    />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_text"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">
                    <EditText
                            android:padding="5dp"
                            android:textAlignment="viewStart"
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="@null"
                            android:gravity="start|center_vertical"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        style="@style/Widget.MaterialComponents.Button"
                        android:text="@string/login"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="20dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>